[tool.poetry]
name = "repl-nix-webappstreamlit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_webappstreamlit"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
streamlit = "^1.32.2"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
seaborn = "^0.13.2"
plotly = "^5.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
